fixed css issue - img visibility

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -2,7 +2,7 @@
 	width: 22vw;
 	display: flex;
 	flex-direction: column;
-	height: 350px;
+	height: 675px;
 	align-items: center;
 
 	position: relative;
@@ -19,7 +19,7 @@
 		width: 80%;
 		opacity: .7;
 		position: absolute;
-		top: 255px;
+		top: 555px;
 		display: none;
 
 		@media screen and (max-width: 800px) {
